--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
+    "font-awesome": "^4.7.0",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22"
   },
