完善了一些前后端接口API，但后端还有些锅

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ coverage
 /cypress/videos/
 /cypress/screenshots/
 
+/__pycache__/
+*.pyc
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
