--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "font-awesome": "^4.7.0",
+    "lucide-react": "^0.548.0",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22"
   },
