--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write \"src/**/*.{js,vue,css,json}\""
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
@@ -20,6 +21,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
+    "prettier": "^3.2.5",
     "vite": "^7.1.7",
     "vite-plugin-vue-devtools": "^8.0.2"
   }
