--- a/backend/.env
+++ b/backend/.env
@@ -2,5 +2,6 @@ localhost = 'http://localhost:4000'
 dbfile = './database/database.db'
 storage_dir = './uploads/'
 DASHSCOPE_API_KEY = sk-109f062630bf4723b5bf987ea9fd4afe
+OPENAI_API_KEY=OPENAI_API_KEY_value_here
 #HTTP_PROXY=http://127.0.0.1:your_port
 #HTTPS_PROXY=http://127.0.0.1:your_port
