--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.13.2",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.548.0",
+    "markdown-it": "^14.1.0",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22"
   },
